# balotachain

./: .editorconfig  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-workspace.yaml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/: README.md
apps/admin/: README.md
apps/auditor/: README.md
apps/trustee/: README.md
apps/voter/: README.md
docs/: README.md  branch-policy.md  dev-environment.md
docs/adr/: 0001-record-architecture-decisions.md  0003-protocol-buffers-for-wire-serialization.md  0004-merlin-fiat-shamir-transcripts.md  README.md  template.md
spec/: README.md
tools/: README.md  bootstrap.ps1  bootstrap.sh
